Fix vertical sliders positioning on IE10.

--- a/src/rzslider.less
+++ b/src/rzslider.less
@@ -172,7 +172,7 @@ rzslider {
 
     .rz-bar {
       bottom: 0;
-      left: initial;
+      left: auto;
       width: @barDimension;
       height: 100%;
     }
